--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -159,6 +159,57 @@ header, footer {
     li {
       display: inline-block;
       margin-left: 5px;
+      position: relative;
+      &.active a {
+        background-color:#fff;
+        color: $blue;
+      }
+      ul {
+        background-color:#000;
+        border-radius:10px;
+        padding: 0;
+        position: absolute;
+        top: 39px;
+        left: -115px;
+        opacity: 0;
+        width: 325px;
+        visibility: hidden;
+        z-index: 100;
+        @include transition (all .7s);
+        &.shown {
+          opacity: 1;
+          top: 43px;
+          visibility: visible;
+          a {
+            background-color:transparent;
+            color: #fff;
+            &:hover {
+              background-color:transparent;
+              color: #aac1cd;
+            }
+          }
+        }
+        li {
+          padding:4px 0;
+        }
+        &:before {
+          content: "";
+          border:10px solid #000;
+          border-top-color:transparent;
+          border-right-color:transparent;
+          border-left-color: transparent;
+          position: absolute;
+          top:-16px;
+          left: 149px;
+        }
+      }
+      #fan-club + ul {
+        left: -132px;
+        width: 370px;
+        &:before {
+          left: 182px;
+        }
+      }
     }
     a {
       border-radius: 7px;
@@ -233,7 +284,7 @@ header, footer {
   margin-top: 40px;
 }
 #sidebar {
-  @include span-columns(3);
+  @include span-columns(3.1);
   height: 100%;
   margin-top: 40px;
 }
@@ -292,20 +343,25 @@ header, footer {
   margin: 0 0 2% 2%;
 }
 .group_event_links {
+  > div {
+    float: left;
+    margin-left: 2%;
+    width: 49%;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
   .performance-event-timed-link, .meet-greet a {
     @include btn;
     background-color:#000;
-    float: left;
     margin-bottom: 10px;
     padding: 1% 3%;
-    width: 49%;
     &:hover {
       background-color:#5f5f5f;
     }
   }
   .meet-greet a {
     background-color: $blue;
-    margin-left: 2%;
     &:hover {
       background-color:#5f5f5f;
     }
@@ -324,6 +380,61 @@ header, footer {
     float: right;
   }
 }
+
+/* Meet & Greet Page */
+.pathone-meet-greet {
+  h1 {
+    background: none;
+    color: #4b7c95;
+    font-size: 1.7em;
+    text-transform: uppercase;
+    &:before {
+      color: #000;
+      content: "P";
+      font: .8em 'icomoon';
+      margin-right: 10px;
+      position: relative;
+      top: 1px;
+    }
+  }
+}
+/* ------------------------------------
+ Sidebar
+-------------------------------------*/
+.pathone-join #sidebar, .logged-in #sidebar {
+  h2 {
+    color: #fff;
+    font-size: 1.6em;
+    margin-bottom: 5px;
+  }
+  > *:first-child {
+    background-color: $blue;
+    margin-bottom: 20px;
+    width: 100%;
+    border-radius: 10px;
+    padding: 5%;
+    label {
+      display: none;
+    }
+    ul {
+      float: left;
+      list-style: none;
+      margin: 3% 9% 0 0;
+      padding:0;
+      a {
+        color: #fff;
+        font-size: .9em;
+      }
+    }
+    input[type="submit"] {
+      background-color:#000;
+      &:hover {
+        background-color:#2f2f2f;
+      }
+    }
+  }
+}
+
 /* ------------------------------------
  Footer
 -------------------------------------*/
@@ -336,6 +447,9 @@ footer {
     margin: 0;
     ul {
       padding:0;
+      ul {
+        display: none;
+      }
     }
     li {
       display: block;
