--- a/assets/scss/front.scss
+++ b/assets/scss/front.scss
@@ -20,6 +20,22 @@ header {
       padding: 7px 13px;
       font-size: 1em;
     }
+    li {
+      ul {
+        left: -100px;
+        width: 288px;
+        &:before {
+          left: 131px;
+        }
+      }
+      #fan-club + ul {
+        left: -119px;
+        width: 320px;
+        &:before {
+          left: 157px;
+        }
+      }
+    }
   }
 }
 #header-inner {
@@ -221,4 +237,72 @@ h1, nav.tabs {
 .location {
   font-size: 1.4em;
   margin-bottom: 2px;
+}
+#post-content {
+  background:url(../images/gray-bg2.png) repeat scroll 0 0;
+  height: 415px;
+  margin-top: -59px;
+  padding-top: 61px;
+}
+#post-inner {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1% 3%;
+  h2 {
+    color: #000;
+    font-size: 1.9em;
+    margin-bottom: 5px;
+    text-align:center;
+    &:before {
+      color: $blue;
+      content: "c";
+      font: 1.1em 'icomoon';
+      margin-right: 10px;
+      position: relative;
+      text-transform: lowercase;
+      top: 1px;
+    }
+  }
+  div > ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+      background-color: #eee;
+      float: left;
+      width: 48%;
+      &:first-child {
+        margin-right: 4%;
+      }
+      div:first-child {
+        float: left;
+        margin-right: 2%;
+        img {
+          display: block;
+        }
+      }
+    }
+    h3, .price {
+      font-size: 1.5em;
+      margin: 10px 0 5px;
+    }
+    p {
+      font: 1.5em 'nexa_lightregular', sans-serif;
+      margin: 0;
+      text-transform: uppercase;
+    }
+    .views-field-view-node {
+      float: left;
+      margin: 2% 20% 0 0;
+      width: 28%;
+      a {
+        @include btn;
+        background-color:$blue;
+        border-radius:10px;
+        font: 1.4em 'nexa_lightregular', sans-serif;
+        padding:7px;
+        text-transform: uppercase;
+      }
+    }
+  }
 }
